# AGS-LuaNext

./: AgsLua.ash  AgsLuaNext.def  AgsLuaNext.slnx  AgsLuaNext.vcxproj  AgsLuaNext.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  README.md  bridge.lua  cpp.hint
.github/workflows/: build.yml
build_linux32/: CMakeCache.txt  Makefile  cmake_install.cmake
build_linux64/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: AgsLuaNext.h  agsplugin.h
src/: AgsLuaNext.cpp  dllmain.cpp  plugin_exports.cpp
